# otp

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-push.sh  deploy-helm.sh  docker-compose.yml  run-docker-compose.sh  start-server.sh  test-docker-compose.sh  test_api.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
helm/otp-server/: Chart.yaml  values.yaml
helm/otp-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/: config.rs  error.rs  main.rs  storage.rs
src/otp/: hotp.rs  mod.rs  totp.rs
src/server/: handlers.rs  mod.rs  routes.rs
